style.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

body {
    width: 100%;
    min-width: 200px;
    height: 100vh;
    font-family: sans-serif;
}
button {
    border: 1px solid grey;
    background: white;
    border-radius: 30px;
    padding: 8px 18px;
    font-size: 0.8rem;
}
button:hover {
    cursor: pointer;
    background: rgb(148, 81, 81);
    color: whitesmoke;
    letter-spacing: 1px;
}
p {
    margin-bottom: 20px;
    font-size: 0.9rem;
    line-height: 2;
}
h2 {
    margin-bottom: 20px;
    font-weight: 100;
}
.section1 {
    display: grid;
    grid-template-columns: 50% 50%;
    height: 600px;
    position: relative;
}

.headerleft {
    align-self: center;
    padding: 40px;
}
.headerleft h1 {
    margin-bottom: 20px;
    font-weight: 100;
}
.headerright {
    background-image: url("./img/banner.jpg");
    background-size: cover;
    background-position: right;
    /* background-repeat: no-repeat; */
}
.section2 {
    display: grid;
    grid-template-columns: 30% 70%;
    position: relative;
}

.section2::before {
    content: "";
    position: absolute;
    background: rgb(224, 221, 221);
    width: 100%;
    height: 1px;
}
.mainleft {
    background-image: url("./img/img-left.jpg");
    background-size: cover;
    background-position: center;
    background-repeat: no-repeat;
}
.mainright {
    padding: 40px;
}
.mainright {
    padding: 80px 40px;
}
.section3 {
    display: grid;
    grid-template-columns: 70% 30%;
    position: relative;
}
.section3::before {
    content: "";
    position: absolute;
    background: rgb(224, 221, 221);
    width: 100%;
    height: 1px;
}
.main2left {
    padding: 40px;
}
.main2right {
    background-image: url("./img/img-right.jpg");
    background-size: cover;
    background-position: center;
}
.section4 {
    position: relative;
}
.form {
    display: flex;
    flex-direction: column;
    align-items: center;
    margin-top: 50px;
    width: 100%;
}
.formulaire {
    display: flex;
    flex-direction: column;
    text-align: center;
    gap: 15px;
}
.hautformulaire {
    display: flex;
    justify-content: center;
    text-align: center;
    margin-bottom: 20px;
}
input,
textarea {
    border-radius: 3px;
    border: 1px solid rgba(128, 128, 128, 0.507);
}
.name {
    display: flex;
    justify-content: space-evenly;
    flex-direction: column;
    text-align: center;
    margin-right: 5px;
}
.name label {
    padding: 10px 0;
}
.name input {
    padding: 4px;
}

.email {
    display: flex;
    justify-content: space-evenly;
    flex-direction: column;
    text-align: center;
    margin-left: 5px;
}
.email label {
    padding: 10px 0;
}
.email input {
    padding: 4px;
}
.message {
    display: flex;
    justify-content: space-evenly;
    flex-direction: column;
    align-items: stretch;
    text-align: center;
    padding-bottom: 20px;
}
.message textarea {
    padding: 10px;
}
.message label {
    margin-bottom: 20px;
}
.submit {
    text-align: center;
    margin-bottom: 50px;
}
.submitbtn {
    background: white;
    border-radius: 30px;
    padding: 8px 18px;
    font-size: 0.8rem;
    align-items: center;
}
.submitbtn:hover {
    cursor: pointer;
    background: rgb(148, 81, 81);
    color: whitesmoke;
    letter-spacing: 1px;
}

.section4::before {
    content: "";
    position: absolute;
    background: rgb(224, 221, 221);
    width: 100%;
    height: 1px;
}
.section5 {
    position: relative;
    display: flex;
}
.footer {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    margin: 0 auto;
}
.footer img {
    padding: 50px 0;
    margin: 20px;
    width: 30px;
}
.footer::before {
    content: "";
    position: absolute;
    background: rgb(224, 221, 221);
    width: 90%;
    height: 1px;
}
@media screen and (max-width: 720px) {
    .section1,
    .section2,
    .section3 {
        display: flex;
        flex-direction: column;
        text-align: center;
    }
    .headerright {
        height: 300px;
        width: 100%;
        background-size: cover;
        background-position: right;
    }
    .mainleft,
    .main2right {
        display: none;
    }
    .form {
        width: 80%;
        margin: 0 auto;
        padding-top: 30px;
    }
    .formulaire{
        padding:0 30PX;
    }
}
@media screen and (max-width: 400px) {
    .titre {
        text-align: center;
    }
    .headerright,
    .mainleft {
        display: none;
    }
    .formulaire{
        padding:0 30PX;
    }
    .form,
    .hautformulaire {
        display: block;
    }
    .name,
    .email {
        margin-right: 0;
        margin-left: 0;
    }
}

